# straico-python

./: .gitignore  LICENSE  MANIFEST.in  PACKAGE_INFO.md  PUBLISHING_GUIDE.md  README.md  SUMMARY.md  examples.py  pyproject.toml  test_installation.py  verify_package.sh
straico/: __init__.py  cli.py  client.py  py.typed
straico_api/: __init__.py  cli.py  client.py
tests/: __init__.py  test_cli.py  test_client.py
