[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "straico"
version = "1.0.0"
description = "Unofficial Python client and CLI for Straico API with smart LLM selection"
readme = "README.md"
authors = [
    {name = "Daniel Winkler", email = "dw@dwinkler.org"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["straico", "ai", "llm", "chatbot", "cli", "api", "gpt", "claude", "gemini"]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://straico.com"
Documentation = "https://documenter.getpostman.com/view/5900072/2s9YyzddrR"
Repository = "https://github.com/straicoai/straico-python"
"Bug Tracker" = "https://github.com/straicoai/straico-python/issues"

[project.scripts]
straico = "straico.cli:main"

[tool.setuptools]
packages = ["straico"]

[tool.setuptools.package-data]
straico = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
